--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "counter",
-  "homepage": http://rj-maitra.github.io/react-counter-app",
+  "homepage": https://rj-maitra.github.io/react-counter-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
