--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "counter",
-  "homepage" : "https://github.com/rj-maitra/react-counter-app.git",
+  "homepage" : "https://rj-maitra.github.io/react-counter-app/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
