--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-counter",
+  "name": "counter",
   "homepage" : "https://rj-maitra.github.io/react-counter/",
   "version": "0.1.0",
   "private": true,
